added color variables

--- a/src/assets/Main.css
+++ b/src/assets/Main.css
@@ -1,8 +1,17 @@
+:root {
+	--primary: #AD8350;
+	--background: #2A1A1F;
+	--highlight: #AFA060;
+	--secondary: #764134;
+}
+
+/* some css color variables*/
+
 * {
 	background-color: #2A1A1F;
 }
 
 
 h1 {
-	color: #AD8350;
+	color: var(--primary);
 }
